sample/retrieveUnpackaged/objects/Key_Business_Activity_Indicator__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KL_per_KBAI_Unit__c</fullName>
        <label>KL per KBAI Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Id__c</fullName>
        <externalId>true</externalId>
        <label>Universal Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WaterMAP__c</fullName>
        <label>WaterMAP</label>
        <referenceTo>WaterMAP__c</referenceTo>
        <relationshipLabel>Key Business Activity Indicators</relationshipLabel>
        <relationshipName>Key_Business_Activity_Indicators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Water_Use_KL__c</fullName>
        <label>ZZZWater Use (KL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Key Business Activity Indicator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Key Business Activity Indicator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Business Activity Indicators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>